{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 501,
  "lineage": "378c5f09-7043-3ffb-c924-09f749867a98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "main_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:network-acl/acl-0af2873ca7727fecd",
            "default_network_acl_id": "acl-0af2873ca7727fecd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0af2873ca7727fecd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "222634359853",
            "subnet_ids": [
              "subnet-08f2488e997ac2340",
              "subnet-0c06d4ea7d092a5d4"
            ],
            "tags": {
              "Name": "unlikely-sunny-goldfish-nacl"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-nacl"
            },
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:route-table/rtb-0c74e95f8a8bab1a6",
            "default_route_table_id": "rtb-0c74e95f8a8bab1a6",
            "id": "rtb-0c74e95f8a8bab1a6",
            "owner_id": "222634359853",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09b9e53cc45beba06",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "unlikely-sunny-goldfish-main-rt"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-main-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2775bf316f5aa92",
            "arn": "arn:aws:ec2:us-east-2:222634359853:elastic-ip/eipalloc-0d2775bf316f5aa92",
            "domain": "vpc",
            "id": "eipalloc-0d2775bf316f5aa92",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-100-133.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.100.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "unlikely-sunny-goldfish-nat-gw-eip"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-nat-gw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a13dbc50c1629c6",
            "arn": "arn:aws:ec2:us-east-2:222634359853:elastic-ip/eipalloc-01a13dbc50c1629c6",
            "domain": "vpc",
            "id": "eipalloc-01a13dbc50c1629c6",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-147-152-165.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.152.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "unlikely-sunny-goldfish-windows-eip"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-windows-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_linux_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0efc43a4067fe9a3e",
            "arn": "arn:aws:ec2:us-east-2:222634359853:instance/i-0786a3a25bbceef28",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0786a3a25bbceef28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "unlikely-sunny-goldfish-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f05d500dbded7abb",
            "private_dns": "ip-10-0-8-54.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088e8db6d8c896838",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c06d4ea7d092a5d4",
            "tags": {
              "Name": "unlikely-sunny-goldfish-linux-server"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-linux-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a5a27c2646a73b1"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.linux_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_windows_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f239dc2703bfeb6",
            "arn": "arn:aws:ec2:us-east-2:222634359853:instance/i-06d6355f0227d59fb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-06d6355f0227d59fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "unlikely-sunny-goldfish-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "htXQQeudEu+XAqmh+w97NUWYbagUGvWvQCrTNduq9XOUsN1WWOVeT7yd55uSXzGHlyHCq/T0uGnBukuxQI9gFCdMg7OV2/OGmSC26CavsV00f8kIu1TGWYV23qzhshcjuUxIc55eUR2tOga7m2yHCpy8QFuAGtshWDx28jdYKCpxwRhyFXee7NQETFa9jSFbSS0z7gAOwfd4lly5+liFjBc2q+ZezGnlpZyqfDxfu4758scBOB3XzPopuvs3QPf1jvV7PZ4HPJH25gZS/ciJ0V2HcPvFE/okI+FyE8sXmbzl1Nb8RMY4UnRXzolKQoNkzVakVxI4n8w6j/Zy4PiHTeR16qwt6tjHFF7W6skRskr99dxK3BcDkOnzTaYOaYYxfSYiVSuRcGyhL7GJHRnaVJRMnZA28wLJihm30Cos7TOdHnRclM+NxX4m95NKYpYT5w9nmjU8GAOP+8qGGSIi6/ [...]
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cb455ab53e0d2d8",
            "private_dns": "ip-10-0-4-39.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-044f3c8c7208c659f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f2488e997ac2340",
            "tags": {
              "Name": "unlikely-sunny-goldfish-windows-server"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-windows-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0683069b0f5aa1f84"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.windows_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc01",
            "data.aws_ami.windows",
            "random_pet.pet_name",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:internet-gateway/igw-02c6fc1e4afaacab8",
            "id": "igw-02c6fc1e4afaacab8",
            "owner_id": "222634359853",
            "tags": {
              "Name": "unlikely-sunny-goldfish-igw"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-igw"
            },
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2775bf316f5aa92",
            "association_id": "eipassoc-0f026fa5c773d8c76",
            "connectivity_type": "public",
            "id": "nat-09b9e53cc45beba06",
            "network_interface_id": "eni-0d20b9aa401bd64b9",
            "private_ip": "10.0.1.167",
            "public_ip": "3.14.100.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f2488e997ac2340",
            "tags": {
              "Name": "unlikely-sunny-goldfish-nat-gw"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:route-table/rtb-0c290be2b2f33f79e",
            "id": "rtb-0c290be2b2f33f79e",
            "owner_id": "222634359853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c6fc1e4afaacab8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "unlikely-sunny-goldfish-public-rt"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2d4985877b2b35c",
            "route_table_id": "rtb-0c290be2b2f33f79e",
            "subnet_id": "subnet-08f2488e997ac2340"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:security-group/sg-01a5a27c2646a73b1",
            "description": "Allow inbound traffic for SSH, MYSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a5a27c2646a73b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Linux SG",
            "name_prefix": "",
            "owner_id": "222634359853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unlikely-sunny-goldfish-linux-sg"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-linux-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:security-group/sg-0683069b0f5aa1f84",
            "description": "Allow inbound traffic for HTTP, HTTPS, RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0683069b0f5aa1f84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Windows SG",
            "name_prefix": "",
            "owner_id": "222634359853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unlikely-sunny-goldfish-windows-sg"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:subnet/subnet-0c06d4ea7d092a5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c06d4ea7d092a5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634359853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "unlikely-sunny-goldfish-private"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-private"
            },
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:subnet/subnet-08f2488e997ac2340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f2488e997ac2340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634359853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "unlikely-sunny-goldfish-public"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish-public"
            },
            "vpc_id": "vpc-0fe8c7eba107a72ec"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "random_pet.pet_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222634359853:vpc/vpc-0fe8c7eba107a72ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0af2873ca7727fecd",
            "default_route_table_id": "rtb-0c74e95f8a8bab1a6",
            "default_security_group_id": "sg-04dcfc54962b3f268",
            "dhcp_options_id": "dopt-077ba5b8b40fe3a2e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe8c7eba107a72ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c74e95f8a8bab1a6",
            "owner_id": "222634359853",
            "tags": {
              "Name": "unlikely-sunny-goldfish"
            },
            "tags_all": {
              "Name": "unlikely-sunny-goldfish"
            }
          },
          "dependencies": [
            "random_pet.pet_name"
          ]
        }
      ]
    }
  ]
}